--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mongodb": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
     "sort-by": "^1.2.0",
