--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.44.3",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
     "react-spinners": "^0.13.8",
