--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.12",
     "aos": "^2.3.4",
     "dotenv": "^16.1.4",
     "firebase": "^9.22.1",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
