--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.29.12",
     "aos": "^2.3.4",
+    "axios": "^1.4.0",
     "dotenv": "^16.1.4",
     "firebase": "^9.22.1",
     "framer-motion": "^10.12.16",
